fixed dialog on mobile

--- a/style.css
+++ b/style.css
@@ -702,7 +702,7 @@ dialog form {
         left: 0;
         width: 50%;
         min-width: 300px;
-        animation: show 1s ease-in-out;
+        animation: show 0.5s ease-in-out;
         height: 100%;
     }
 
@@ -778,8 +778,7 @@ dialog form {
         max-width: 100%;
         height: fit-content;
         position: absolute;
-        margin-bottom: 0;
-        
+        margin-top: 0;
     }
     
     dialog::backdrop {
@@ -787,9 +786,9 @@ dialog form {
         opacity: 0.8;
     }
 
-    dialog[open] {
+    /* dialog[open] {
         animation:  0.3s ease-in-out;
-    }
+    } */
     
     .task-card {
         position: relative;
